@@ -237,6 +237,15 @@ class Category extends CategoryListBase {
 	 */
 	protected function initialize() {
 		parent::initialize();
+
+		# (bug 13683) If the count is negative, then 1) it's obviously wrong
+		# and should not be kept, and 2) we *probably* don't have to scan many
+		# rows to obtain the correct figure, so let's risk a one-time recount.
+		if( $this->mPages[0] < 0 || $this->mSubcats[0] < 0 ||
+		$this->mFiles[0] < 0 ) {
+			$this->refreshCounts();
+		}
+
 		if( count( $this->mNames ) != 1 || count( $this->mIDs ) != 1 ) {
 			return false;
 		}
